--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using @vitejs/plugin-react"
+      content="A tool to help optimize speedruns in Palia's Tower"
     />
     <link rel="apple-touch-icon" href="/logo192.png" />
     <!--
@@ -15,7 +15,7 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="/manifest.json" />
-    <title>React App</title>
+    <title>Tower Run Planner</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
